# simple_mfc

./: CMakeLists.txt  README.md
.github/workflows/: msvc.yml
include/: afx.h  afxcmn.h  afxcoll.h  afxdd_.h  afxdhtml.h  afxdlgs.h  afxdtctl.h  afxext.h  afximpl.h  afxinet.h  afxmsg_.h  afxmt.h  afxocc.h  afxole.h  afxres.h  afxsock.h  afxtempl.h  afxwin.h  atlalloc.h  atlbase.h  atlcoll.h  atlcomcli.h  atlcomtime.h  atlconv.h  atldef.h  atlenc.h  atlimage.h  atlsimpcoll.h  atltime.h  atltypes.h  sockimpl.h
src/: afx.cpp  afxcoll.cpp  afximpl.cpp  afxinet.cpp  afxmt.cpp  atlconv.cpp  atlenc.cpp  atltime.cpp  atltypes.cpp
test/: smoke_test.cpp
tests/: smoke_test.cpp
tests/conformance/: CMakeLists.txt  cases.cpp  compare.cmake
